[project]
name = "t2i"
version = "0.1.0"
description = "Text to Image Sample App"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.34.2",
    "diffusers>=0.30.2",
    "fastapi>=0.112.2",
    "fire>=0.6.0",
    "jinja2>=3.1.4",
    "numpy==1.23.5",
    "protobuf>=5.28.2",
    "python-dotenv>=1.0.1",
    "python-json-logger>=2.0.7",
    "python-multipart>=0.0.10",
    "requests>=2.32.3",
    "sentencepiece>=0.2.0",
    "torch==2.1.0",
    "transformers>=4.46.0.dev0",
    "uuid6>=2024.7.10",
    "uvicorn>=0.30.6",
]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.380",
    "ruff>=0.6.3",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git" }
